--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/cluster-adapter": "^0.2.2",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "nodemon": "3.0.2",
     "socket.io": "4.7.2",
-    "socket.io-client": "4.7.2"
+    "socket.io-client": "4.7.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6"
   }
 }
